@@ -1,5 +1,6 @@
 // -*- coding: utf-8 -*-
-// Copyright (C) 2014-2019 Laboratoire de Recherche et Développement de l'Epita.
+// Copyright (C) 2014-2020 Laboratoire de Recherche et Développement
+// de l'Epita.
 //
 // This file is part of Spot, a model checking library.
 //
@@ -509,18 +510,6 @@ namespace spot
     {
       return g_.is_existential();
     }
-
-#ifndef SWIG
-    /// \brief Whether the automaton has universal branching
-    ///
-    /// The name of this function is confusing since non-deterministic
-    /// automata should be a subclass of alternating automata.
-    SPOT_DEPRECATED("use !is_existential() instead")
-    bool is_alternating() const
-    {
-      return !is_existential();
-    }
-#endif
 
 #ifndef SWIG
     auto states() const
