@@ -111,6 +111,9 @@ New in spot 2.8.7.dev (not yet released)
     the input is Rabin-like or Streett-like, to_parity() should be at
     least as good as iar().
 
+  - The twa_graph::is_alternating() and digraph::is_alternating() methods,
+    deprecated in Spot 2.3.1 (2017-02-20), have been removed.
+
 New in spot 2.8.7 (2020-03-13)
 
   Bugs fixed:
